fix(supra navbar): wrong left alignment

--- a/scss/_o-navbar.scss
+++ b/scss/_o-navbar.scss
@@ -13,7 +13,7 @@
   }
 
   .navbar-nav {
-    margin: 0 -#{map-get($spacers, 2)};
+    margin: 0 -#{$navbar-supra-padding-x};
   }
 
   .nav-link {
